// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.S checkGrammar=false 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S checkGrammar=true 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S checkHighlight=false 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S checkHighlight=true 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S checkSpaces=false 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S checkSpaces=true 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S className="my-classname" 1`] = `
<s
  className="uu5-bricks-s my-classname"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S className="test-classname" 1`] = `
<s
  className="uu5-bricks-s test-classname"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S content="This is Content from ContentMixin" 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
>
  This is Content from ContentMixin
</s>
`;

exports[`UU5.Bricks.S content=12345 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
>
  12345
</s>
`;

exports[`UU5.Bricks.S controlled=false 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S controlled=true 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S default props 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S disabled=false 1`] = `
<s
  className="uu5-bricks-s"
  disabled={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.S disabled=false 3`] = `
<s
  className="uu5-bricks-s"
  disabled={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.S disabled=true 1`] = `
<s
  className="uu5-bricks-s"
  disabled={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.S disabled=true 3`] = `
<s
  className="uu5-bricks-s"
  disabled={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.S docKit examples UU5.Bricks.S should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <P
    content="This is normal text"
    id="uuID02"
    key="uuID02"
  />
  <P
    id="uuID03"
    key="uuID03"
  >
    This is 
    <S
      id="uuID04"
    >
      striked
    </S>
     text
  </P>
</div>
`;

exports[`UU5.Bricks.S dynamic=false 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S dynamic=true 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S fullTextSearchPriority=0 1`] = `
<s
  className="uu5-bricks-s uu-fulltextsearch-0"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S hidden=false 1`] = `
<s
  className="uu5-bricks-s"
  hidden={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.S hidden=false 3`] = `
<s
  className="uu5-bricks-s"
  hidden={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.S hidden=true 1`] = `
<s
  className="uu5-bricks-s"
  hidden={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.S hidden=true 3`] = `
<s
  className="uu5-bricks-s"
  hidden={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.S id="myId" 1`] = `
<s
  className="uu5-bricks-s"
  id="myId"
/>
`;

exports[`UU5.Bricks.S id="test-id" 1`] = `
<s
  className="uu5-bricks-s"
  id="test-id"
/>
`;

exports[`UU5.Bricks.S ignoreHTML=false 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S ignoreHTML=true 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S mainAttrs=undefined 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S name="myName" 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S nestingLevel="box" 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S nestingLevel="inline" 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S noIndex=false 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S noIndex=true 1`] = `
<s
  className="uu5-bricks-s uu-fulltextsearch-0 uu5-noindex"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S noPrint=false 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S noPrint=true 1`] = `
<s
  className="uu5-bricks-s uug-1ak6bum"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S selected=false 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S selected=true 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S style="padding:8px; borderRadius: 2px" 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
/>
`;

exports[`UU5.Bricks.S style={"backgroundColor":"red","color":"blue"} 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Bricks.S style={"margin":8} 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
/>
`;

exports[`UU5.Bricks.S textCorrector=false 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S textCorrector=true 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;

exports[`UU5.Bricks.S tooltip="My Tooltip" 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
/>
`;
